Fixed sticky filter track on mobile and horizontal scroll

--- a/src/styles/contentGrid.css
+++ b/src/styles/contentGrid.css
@@ -13,6 +13,11 @@
   --filterFlexGap: 0.4rem;
 }
 
+.content-grid-container {
+  margin-left: var(--horizontal-page-padding);
+  margin-right: var(--horizontal-page-padding);
+}
+
 /* Filters Container */
 .filter-track {
   /* Positioning */
@@ -491,8 +496,8 @@ article .new-label {
 
 @media (max-width: 650px) {
   .content-grid-container {
-    overflow-x: hidden;
-    max-width: 100vw;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .content-grid {
@@ -501,13 +506,11 @@ article .new-label {
     gap: 1.2rem 0;
   }
 
-  .container .content-grid {
-    margin-left: calc(-1 * var(--horizontal-page-padding));
-    margin-right: calc(-1 * var(--horizontal-page-padding));
-  }
-
   .content-card > a {
     border-radius: 0;
+    border: none;
+    border-top: 1px solid var(--color-black-2);
+    border-bottom: 1px solid var(--color-black-2);
   }
 
   article .new-label {
@@ -526,10 +529,10 @@ article .new-label {
   .filter-track {
     /* Positioning */
     top: 45px;
-    padding: 0;
+    padding: 0 10px;
   }
 
   .filter-track.active {
-    padding: 0 var(--horizontal-page-padding);
+    padding: 0 31px;
   }
 }
